--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,8 @@ jobs:
                     yarn
                     yarn run build --if-present
                     mkdir ${{ env.PLUGIN_NAME }}
-                    cp main.js manifest.json ${{ env.PLUGIN_NAME }}
-                    zip -r ${{ env.PLUGIN_NAME }}.zip ${{ env.PLUGIN_NAME }} styles.css 
+                    cp main.js manifest.json styles.css ${{ env.PLUGIN_NAME }}
+                    zip -r ${{ env.PLUGIN_NAME }}.zip ${{ env.PLUGIN_NAME }}
                     ls
                     echo "::set-output name=tag_name::$(git tag --sort version:refname | tail -n 1)"
             -   name: Create Release
