--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "obsidian-media-db-plugin",
-	"version": "0.1.0",
-	"description": "Coming soon TM",
+	"version": "0.3.0",
+	"description": "A plugin that can query multiple APIs for movies, series, anime, games, music and wiki articles, and import them into your vault.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
@@ -9,8 +9,8 @@
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
 	"keywords": [],
-	"author": "",
-	"license": "MIT",
+	"author": "Moritz Jung",
+	"license": "GPL-3.0",
 	"devDependencies": {
 		"@popperjs/core": "^2.11.5",
 		"@types/node": "^16.11.6",
