--- a/package.json
+++ b/package.json
@@ -6,20 +6,29 @@
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"version": "node version-bump.mjs && git add manifest.json versions.json",
+		"test": "jest"
 	},
 	"keywords": [],
 	"author": "Moritz Jung",
 	"license": "GPL-3.0",
 	"devDependencies": {
 		"@popperjs/core": "^2.11.5",
+		"@types/jest": "^28.1.3",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "^5.2.0",
 		"@typescript-eslint/parser": "^5.2.0",
 		"builtin-modules": "^3.2.0",
 		"esbuild": "0.13.12",
+		"jest": "^28.1.2",
+		"jest-fetch-mock": "^3.0.3",
 		"obsidian": "latest",
+		"ts-jest": "^28.0.5",
 		"tslib": "2.3.1",
 		"typescript": "4.4.4"
+	},
+	"dependencies": {
+		"ts-node": "^10.8.1",
+		"yarn": "^1.22.19"
 	}
 }
