--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "isolatedModules": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
     "lib": [
       "DOM",
       "ES5",
