--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
 	"license": "GPL-3.0",
 	"devDependencies": {
 		"@popperjs/core": "^2.11.5",
+		"@tsconfig/svelte": "^3.0.0",
 		"@types/jest": "^28.1.3",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "^5.2.0",
 		"@typescript-eslint/parser": "^5.2.0",
 		"builtin-modules": "^3.2.0",
 		"esbuild": "0.13.12",
+		"esbuild-svelte": "^0.7.1",
 		"jest": "^28.1.2",
 		"jest-fetch-mock": "^3.0.3",
 		"obsidian": "latest",
+		"svelte": "^3.50.1",
+		"svelte-preprocess": "^4.10.7",
 		"ts-jest": "^28.0.5",
 		"tslib": "2.3.1",
 		"typescript": "4.4.4"
