--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
-		"test": "jest"
+		"test": "jest",
+		"format": "prettier --write ."
 	},
 	"keywords": [],
 	"author": "Moritz Jung",
@@ -29,7 +30,8 @@
 		"svelte-preprocess": "^4.10.7",
 		"ts-jest": "^28.0.5",
 		"tslib": "2.3.1",
-		"typescript": "4.4.4"
+		"typescript": "4.4.4",
+		"prettier": "2.7.1"
 	},
 	"dependencies": {
 		"ts-node": "^10.8.1",
