--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,6 @@
 {
 	"compilerOptions": {
-		"types": [
-			"svelte",
-			"node",
-			"jest"
-		],
+		"types": ["svelte", "node", "jest"],
 		"baseUrl": ".",
 		"inlineSourceMap": true,
 		"inlineSources": true,
@@ -17,14 +13,7 @@
 		"isolatedModules": true,
 		"esModuleInterop": true,
 		"resolveJsonModule": true,
-		"lib": [
-			"DOM",
-			"ES5",
-			"ES6",
-			"ES7"
-		]
+		"lib": ["DOM", "ES5", "ES6", "ES7"]
 	},
-	"include": [
-		"**/*.ts"
-	]
+	"include": ["**/*.ts"]
 }
