--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"builtin-modules": "^3.2.0",
 		"esbuild": "0.13.12",
 		"esbuild-svelte": "^0.7.1",
+		"eslint-plugin-only-warn": "^1.0.3",
 		"jest": "^28.1.2",
 		"jest-fetch-mock": "^3.0.3",
 		"obsidian": "latest",
