--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,1 @@
-{
-	"id": "obsidian-media-db-plugin",
-	"name": "Media DB Plugin",
-	"version": "0.5.1",
-	"minAppVersion": "0.14.0",
-	"description": "A plugin that can query multiple APIs for movies, series, anime, games, music and wiki articles, and import them into your vault.",
-	"author": "Moritz Jung",
-	"authorUrl": "https://mprojectscode.github.io/",
-	"isDesktopOnly": false
-}
+{"id":"obsidian-media-db-plugin","name":"Media DB Plugin","version":"0.5.2","minAppVersion":"0.14.0","description":"A plugin that can query multiple APIs for movies, series, anime, games, music and wiki articles, and import them into your vault.","author":"Moritz Jung","authorUrl":"https://mprojectscode.github.io/","isDesktopOnly":false}
