--- a/package.json
+++ b/package.json
@@ -16,26 +16,23 @@
 	"devDependencies": {
 		"@popperjs/core": "^2.11.5",
 		"@tsconfig/svelte": "^3.0.0",
-		"@types/jest": "^28.1.3",
-		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "^5.2.0",
-		"@typescript-eslint/parser": "^5.2.0",
-		"builtin-modules": "^3.2.0",
-		"esbuild": "0.13.12",
+		"@types/jest": "^29.5.3",
+		"@types/node": "^18.16.20",
+		"@typescript-eslint/eslint-plugin": "^5.30.0",
+		"@typescript-eslint/parser": "^5.30.0",
+		"builtin-modules": "^3.3.0",
+		"esbuild": "^0.14.47",
 		"esbuild-svelte": "^0.7.1",
 		"eslint-plugin-only-warn": "^1.0.3",
-		"jest": "^28.1.2",
+		"jest": "^29.6.1",
 		"jest-fetch-mock": "^3.0.3",
 		"obsidian": "latest",
-		"svelte": "^3.50.1",
+		"svelte": "^3.53.1",
 		"svelte-preprocess": "^4.10.7",
-		"ts-jest": "^28.0.5",
-		"tslib": "2.3.1",
-		"typescript": "4.4.4",
+		"ts-jest": "^29.1.1",
+		"tslib": "2.4.0",
+		"typescript": "^4.9.5",
 		"prettier": "2.7.1"
 	},
-	"dependencies": {
-		"ts-node": "^10.8.1",
-		"yarn": "^1.22.19"
-	}
+	"dependencies": {}
 }
