--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,8 @@
 		"moduleResolution": "node",
 		"importHelpers": true,
 		"isolatedModules": true,
-		"esModuleInterop": true,
 		"resolveJsonModule": true,
-		"lib": ["DOM", "ES5", "ES6", "ES7"]
+		"lib": ["DOM", "ES5", "ES6", "ES7", "Es2021"]
 	},
 	"include": ["**/*.ts"]
 }
