--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "A plugin that can query multiple APIs for movies, series, anime, games, music and wiki articles, and import them into your vault.",
 	"main": "main.js",
 	"scripts": {
-		"dev": "node esbuild.config.mjs",
+		"dev": "node esbuild.dev.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
 		"test": "jest",
@@ -14,25 +14,24 @@
 	"author": "Moritz Jung",
 	"license": "GPL-3.0",
 	"devDependencies": {
-		"@popperjs/core": "^2.11.5",
-		"@tsconfig/svelte": "^3.0.0",
-		"@types/jest": "^29.5.3",
-		"@types/node": "^18.16.20",
-		"@typescript-eslint/eslint-plugin": "^5.30.0",
-		"@typescript-eslint/parser": "^5.30.0",
+		"@popperjs/core": "^2.11.8",
+		"@tsconfig/svelte": "^5.0.2",
+		"@types/jest": "^29.5.11",
+		"@types/node": "^20.10.4",
+		"@typescript-eslint/eslint-plugin": "^6.14.0",
+		"@typescript-eslint/parser": "^6.14.0",
 		"builtin-modules": "^3.3.0",
-		"esbuild": "^0.14.47",
-		"esbuild-svelte": "^0.7.1",
-		"eslint-plugin-only-warn": "^1.0.3",
-		"jest": "^29.6.1",
+		"esbuild": "^0.19.9",
+		"esbuild-svelte": "^0.8.0",
+		"eslint-plugin-only-warn": "^1.1.0",
+		"jest": "^29.7.0",
 		"jest-fetch-mock": "^3.0.3",
-		"obsidian": "latest",
-		"svelte": "^3.53.1",
-		"svelte-preprocess": "^4.10.7",
+		"obsidian": "^1.4.11",
+		"prettier": "3.1.1",
+		"svelte": "^4.2.8",
+		"svelte-preprocess": "^5.1.2",
 		"ts-jest": "^29.1.1",
-		"tslib": "2.4.0",
-		"typescript": "^4.9.5",
-		"prettier": "2.7.1"
-	},
-	"dependencies": {}
+		"tslib": "2.6.2",
+		"typescript": "^5.3.3"
+	}
 }
