--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
 		"importHelpers": true,
 		"isolatedModules": true,
 		"resolveJsonModule": true,
+		"allowSyntheticDefaultImports": true,
 		"lib": ["DOM", "ES5", "ES6", "ES7", "Es2021"]
 	},
 	"include": ["**/*.ts"]
