fix some issues; migrate to bun'

--- a/package.json
+++ b/package.json
@@ -4,34 +4,48 @@
 	"description": "A plugin that can query multiple APIs for movies, series, anime, games, music and wiki articles, and import them into your vault.",
 	"main": "main.js",
 	"scripts": {
-		"dev": "node esbuild.dev.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json",
-		"test": "jest",
-		"format": "prettier --write ."
+		"dev": "bun run automation/build/esbuild.dev.config.ts",
+		"build": "bun run tsc && bun run automation/build/esbuild.config.ts",
+		"tsc": "tsc -noEmit -skipLibCheck",
+		"test": "bun test",
+		"test:log": "LOG_TESTS=true bun test",
+		"format": "prettier --write --plugin prettier-plugin-svelte .",
+		"format:check": "prettier --check --plugin prettier-plugin-svelte .",
+		"lint": "eslint --max-warnings=0 src/**",
+		"lint:fix": "eslint --max-warnings=0 --fix src/**",
+		"svelte-check": "svelte-check --compiler-warnings \"unused-export-let:ignore\"",
+		"check": "bun run format:check && bun run tsc && bun run lint && bun run test",
+		"check:fix": "bun run format && bun run tsc && bun run lint:fix && bun run test",
+		"release": "bun run automation/release.ts",
+		"stats": "bun run automation/stats.ts"
 	},
 	"keywords": [],
 	"author": "Moritz Jung",
 	"license": "GPL-3.0",
 	"devDependencies": {
 		"@popperjs/core": "^2.11.8",
-		"@tsconfig/svelte": "^5.0.2",
-		"@types/jest": "^29.5.11",
-		"@types/node": "^20.10.4",
-		"@typescript-eslint/eslint-plugin": "^6.14.0",
-		"@typescript-eslint/parser": "^6.14.0",
+		"@lemons_dev/parsinom": "^0.0.12",
+		"@happy-dom/global-registrator": "^14.3.6",
+		"@tsconfig/svelte": "^5.0.3",
+		"@types/bun": "^1.0.10",
+		"@typescript-eslint/eslint-plugin": "^7.3.1",
+		"@typescript-eslint/parser": "^7.3.1",
 		"builtin-modules": "^3.3.0",
-		"esbuild": "^0.19.9",
+		"esbuild": "^0.20.2",
+		"esbuild-plugin-copy-watch": "^2.1.0",
 		"esbuild-svelte": "^0.8.0",
+		"eslint": "^8.57.0",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-isaacscript": "^3.12.2",
 		"eslint-plugin-only-warn": "^1.1.0",
-		"jest": "^29.7.0",
-		"jest-fetch-mock": "^3.0.3",
-		"obsidian": "^1.4.11",
-		"prettier": "3.1.1",
-		"svelte": "^4.2.8",
-		"svelte-preprocess": "^5.1.2",
-		"ts-jest": "^29.1.1",
-		"tslib": "2.6.2",
-		"typescript": "^5.3.3"
+		"obsidian": "latest",
+		"prettier": "^3.2.5",
+		"prettier-plugin-svelte": "^3.2.2",
+		"string-argv": "^0.3.2",
+		"svelte": "^4.2.12",
+		"svelte-check": "^3.6.8",
+		"svelte-preprocess": "^5.1.3",
+		"tslib": "^2.6.2",
+		"typescript": "^5.4.3"
 	}
 }
