--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,6 @@
 {
 	"compilerOptions": {
-		"types": ["svelte", "node", "jest"],
 		"baseUrl": ".",
-		"inlineSourceMap": true,
-		"inlineSources": true,
 		"module": "ESNext",
 		"target": "ES6",
 		"allowJs": true,
@@ -11,9 +8,9 @@
 		"moduleResolution": "node",
 		"importHelpers": true,
 		"isolatedModules": true,
-		"resolveJsonModule": true,
-		"allowSyntheticDefaultImports": true,
-		"lib": ["DOM", "ES5", "ES6", "ES7", "Es2021"]
+		"lib": ["DOM", "ESNext"],
+		"types": ["svelte"],
+		"allowSyntheticDefaultImports": true
 	},
-	"include": ["**/*.ts"]
+	"include": ["src/**/*.ts", "tests/**/*.ts"]
 }
