--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ exampleVault/.obsidian/*
 exampleVault/.obsidian/plugins/*
 exampleVault/.obsidian/plugins/obsidian-media-db-plugin/*
 !exampleVault/.obsidian/plugins/obsidian-media-db-plugin/.hotreload
+
+exampleVault/Media DB/*
