big changes; we have a good TS config now

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,22 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"module": "ESNext",
-		"target": "ES6",
+		"target": "ESNext",
 		"allowJs": true,
+		"checkJs": true,
 		"noImplicitAny": true,
+		"strict": true,
+		"strictNullChecks": true,
+		"noImplicitReturns": true,
 		"moduleResolution": "node",
 		"importHelpers": true,
 		"isolatedModules": true,
+		"skipLibCheck": true,
+		"verbatimModuleSyntax": true,
+		"resolveJsonModule": true,
+		"moduleDetection": "force",
+		"sourceMap": true,
 		"lib": ["DOM", "ESNext"],
-		"types": ["svelte"],
 		"allowSyntheticDefaultImports": true
 	},
 	"include": ["src/**/*.ts", "tests/**/*.ts"]
