--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"eslint": "^9.32.0",
 		"eslint-plugin-import": "^2.32.0",
 		"eslint-plugin-only-warn": "^1.1.0",
+		"iso-639-2": "^3.0.2",
 		"obsidian": "latest",
 		"openapi-fetch": "^0.14.0",
 		"openapi-typescript": "^7.8.0",
