Add meta.txt to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ exampleVault/.obsidian/plugins/obsidian-media-db-plugin/*
 !exampleVault/.obsidian/plugins/obsidian-media-db-plugin/.hotreload
 
 exampleVault/Media DB/*
+meta.txt
