--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
                   bun install
                   bun run build
                   mkdir ${{ env.PLUGIN_NAME }}
-                  cp main.js manifest.json styles.css ${{ env.PLUGIN_NAME }}
+                  cp dist/main.js dist/manifest.json dist/styles.css ${{ env.PLUGIN_NAME }}
                   zip -r ${{ env.PLUGIN_NAME }}-${{ github.ref_name }}.zip ${{ env.PLUGIN_NAME }}
                   ls
 
@@ -49,6 +49,6 @@ jobs:
                   token: ${{ secrets.GITHUB_TOKEN }}
                   files: |
                       ${{ env.PLUGIN_NAME }}-${{ github.ref_name }}.zip
-                      main.js
-                      manifest.json
-                      styles.css
+                      dist/main.js
+                      dist/manifest.json
+                      dist/styles.css
