--- a/package.json
+++ b/package.json
@@ -4,18 +4,17 @@
 	"description": "A plugin that can query multiple APIs for movies, series, anime, manga, books, comics, games, music and wiki articles, and import them into your vault.",
 	"main": "main.js",
 	"scripts": {
-		"dev": "bun run automation/build/esbuild.dev.config.ts",
-		"build": "bun run tsc && bun run automation/build/esbuild.config.ts",
+		"dev": "vite build --watch --mode development",
+		"build": "bun run tsc && vite build --mode production",
 		"tsc": "tsc -noEmit -skipLibCheck",
 		"test": "bun test",
 		"test:log": "LOG_TESTS=true bun test",
-		"format": "prettier --write --plugin prettier-plugin-svelte .",
-		"format:check": "prettier --check --plugin prettier-plugin-svelte .",
-		"lint": "eslint --max-warnings=0 src/**",
-		"lint:fix": "eslint --max-warnings=0 --fix src/**",
-		"svelte-check": "svelte-check --compiler-warnings \"unused-export-let:ignore\"",
-		"check": "bun run format:check && bun run tsc && bun run lint && bun run svelte-check",
-		"check:fix": "bun run format && bun run tsc && bun run lint:fix && bun run svelte-check",
+		"format": "prettier --write .",
+		"format:check": "prettier --check .",
+		"lint": "eslint --max-warnings=0 --no-warn-ignored src/**",
+		"lint:fix": "eslint --max-warnings=0 --fix --no-warn-ignored src/**",
+		"check": "bun run format:check && bun run tsc && bun run lint",
+		"check:fix": "bun run format && bun run tsc && bun run lint:fix",
 		"release": "bun run automation/release.ts",
 		"stats": "bun run automation/stats.ts"
 	},
@@ -28,9 +27,6 @@
 		"@popperjs/core": "^2.11.8",
 		"@types/bun": "^1.3.7",
 		"builtin-modules": "^5.0.0",
-		"esbuild": "^0.25.12",
-		"esbuild-plugin-copy-watch": "^2.3.1",
-		"esbuild-svelte": "^0.9.4",
 		"eslint": "^9.39.2",
 		"eslint-plugin-import": "^2.32.0",
 		"eslint-plugin-only-warn": "^1.1.0",
@@ -39,13 +35,14 @@
 		"openapi-fetch": "^0.14.1",
 		"openapi-typescript": "^7.10.1",
 		"prettier": "^3.8.1",
-		"prettier-plugin-svelte": "^3.4.1",
+		"solid-js": "^1.9.3",
 		"string-argv": "^0.3.2",
-		"svelte": "^5.48.5",
-		"svelte-check": "^4.3.5",
-		"svelte-preprocess": "^6.0.3",
 		"tslib": "^2.8.1",
 		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.54.0"
+		"typescript-eslint": "^8.54.0",
+		"vite": "^6.0.5",
+		"vite-plugin-banner": "^0.8.1",
+		"vite-plugin-solid": "^2.11.0",
+		"vite-plugin-static-copy": "^3.2.0"
 	}
 }
